base/src/test/resources/failure/syntax/literate-unresolved.aya.txt
In file $FILE:3:0 ->

  1 | prim I
  2 | --| test `I`
  3 | --| test `unresolved`
      ^-------------------^

Error: The unqualified name referred to by `unresolved` is not defined in the current
       scope
Resolving interrupted due to error(s).
What are you doing?
